tests/snapshots/parser_snapshots__parser_all@ast-18.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/18_union_events_interface.of
---
Err(
    "unexpected token comment",
)
