tests/snapshots/parser_snapshots__parser_all@ast-185.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/validator/p5_var_decl_with_annotation_and_init.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    VarDecl(
                                        "x",
                                        Some(
                                            Primitive(
                                                Int64,
                                            ),
                                        ),
                                        Some(
                                            Literal(
                                                Int(
                                                    "5",
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
