tests/snapshots/parser_snapshots__parser_all@ast-19.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/19_union_result_with_errors.of
---
Err(
    "unexpected token comment",
)
