tests/snapshots/parser_snapshots__parser_all@ast-20.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/20_union_config_constraints.of
---
Err(
    "unexpected token comment",
)
